# fastapi-sqlalchemy-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  web.py
migrations/: config.py  env.py
migrations/versions/: 68eba0ebdc07_initial_revision.py
src/app/: di.py
src/app/controllers/: user.py
src/app/db/: session.py
src/app/db/models/: base.py  user.py
src/app/db/repositories/: user.py
src/app/db/repositories/mappers/: user.py
src/core/: config.py
src/entities/: base.py  user.py
src/repositories/: i_base.py  i_user_repository.py  mapper.py
src/repositories/dto/: user.py
